--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <title>Instagram</title>
 </head>
 
-<body>
+<body class="light">
   <div id="root"></div>
+
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
